src/objects/Log__c.object
<CustomObject>
    <fields>
        <fullName>DebugLevel__c</fullName>
        <label>Debug Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_not_remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <label>Log Message</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>DebugLevel__c</columns>
        <columns>Tag__c</columns>
        <columns>Log_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_today</fullName>
        <columns>NAME</columns>
        <columns>DebugLevel__c</columns>
        <columns>Tag__c</columns>
        <columns>Log_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All of today</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>